--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,36 @@
+
+body{
+    margin: 0;
+    padding:5px;
+    background-color: black;
+
+}
+
 h1{ 
-    color: blue;
+
+    
+}
+
+h2{
+    font-style: italic;
+    font-size: medium;
+    font-weight: lighter;
+
+
+
+}
+main{
+    background-color:rgb(209, 203, 203);
+    margin-bottom: 0;
+    padding:10px;
+}
+
+footer{
+    background-color: grey;
+    margin-top: 0;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+
+
 }
