--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,9 @@ body{
     background-color: black;
 
 }
+main{
+    
+}
 
 h1{ 
 
@@ -33,4 +36,7 @@ footer{
     padding-left: 10px;
 
 
+}
+.top_info{
+    background-image: ;
 }
