--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body{
     display:flex;
     align-items: center;
     justify-content: space-between;
+    
 }
 
 
@@ -54,4 +55,5 @@ footer{
 .resume{
     font-style: italic;
     font-weight:400;
+    text-decoration: underline;
 }
