--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,23 @@ body{
     margin: 0;
     padding:5px;
     
-    background-color:black;
+    background-color: rgb(220, 184, 138);
+
+}
+.translator{
+    display: flex;
+    flex-direction: row-reverse;
+
+
+
 
 }
 .top_info{
     display:flex;
     align-items: center;
     justify-content: space-between;
-    
+    //flex-grow: ;
+    //flex-shrink: ;
 }
 
 
@@ -31,6 +40,7 @@ main{
 }
 
 #footer{
+    
     background-color: rgb(220, 184, 138);
     margin-top: 0;
     padding-top: 5px;
