--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,10 @@ body{
     justify-content: space-between;
    
 }
+h1{
+    color: brown;
+    font-family: 'Lobster', cursive;
+}
 
 h2{
     font-style: italic;
@@ -34,6 +38,7 @@ main{
     margin-bottom: 0;
     padding:8px;
    
+   
     
 }
 
@@ -46,6 +51,13 @@ main{
     padding-left: 10px;
    
 
+}
+.bio{
+    font-family: 'Dancing Script', cursive;
+
+}
+.pro{
+    font-family: 'Dancing Script', cursive;
 }
 
 .skills{
@@ -64,17 +76,14 @@ main{
     text-decoration: underline;
     font-weight: bold;  
 }
-.resume{
-    font-style: italic;
-    font-weight:400;
-    text-decoration: underline;
-}
+
 .img1{
     border-radius: 20px;
    
 }
 .img2{
     border-radius: 20px;
+    
 }
 .img4{
     border-radius: 20px;
@@ -82,4 +91,7 @@ main{
 .icon{
     display: flex;
     flex-direction: row-reverse;
+}
+.link{
+    text-decoration:brown;
 }
