--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,8 @@ main{
     padding-top: 5px;
     padding-bottom: 5px;
     padding-left: 10px;
-   
+    font-family: 'Lobster', cursive;
+    color: brown;
 
 }
 .bio{
@@ -68,16 +69,19 @@ main{
     text-decoration: underline;
     font-weight: bold;
     font-family: 'Kalam', cursive;
+    color: brown;
 }
 .future{
     text-decoration: underline;
     font-weight: bold;  
     font-family: 'Kalam', cursive;
+    color: brown;
 }
 .hobbies{
     text-decoration: underline;
     font-weight: bold; 
     font-family: 'Kalam', cursive;
+    color: brown;
 }
 .list_0{
     font-family: 'Kalam', cursive;
